--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,7 @@ book:
         - book_parts/stats/00-numpy-pandas-primer.ipynb
         - book_parts/stats/01-parameter-estimation.ipynb
         - book_parts/stats/02-hypothesis_tests.ipynb
+        - book_parts/stats/03-linear_reg.ipynb
         - book_parts/stats/06-classification.ipynb
     - part: "book_parts/data_processing/index.qmd"
       chapters:
